force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <description>These are the records that will calculate the individual records</description>
    <label>iMC Commission</label>
    <nameField>
        <displayFormat>$$$-{YYYY}-{MM}-{000}</displayFormat>
        <label>iMC Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iMC Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>