force-app/main/default/objects/Commission__c/fields/Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Accelerator__c</fullName>
    <inlineHelpText>This is used to scale the commissionable amount</inlineHelpText>
    <label>Accelerator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>