force-app/main/default/objects/Commission__c/fields/Billing_Value__c.field-meta.xml
<CustomField>
    <fullName>Billing_Value__c</fullName>
    <formula>Opportunity__r.Billing_Value__c</formula>
    <inlineHelpText>Billing Value from opportunity</inlineHelpText>
    <label>Billing Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>