force-app/main/default/objects/Commission__c/fields/Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Date__c</fullName>
    <inlineHelpText>Date the commission is scheduled. This will be the close date of the attached opportunity.</inlineHelpText>
    <label>Commission Date</label>
    <type>Date</type>
</CustomField>