force-app/main/default/objects/Commission__c/fields/Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Notes__c</fullName>
    <label>Commission Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>