force-app/main/default/objects/Commission__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <formula>Opportunity__r.Contract_Term__c</formula>
    <inlineHelpText>From the opportunity Contract Term</inlineHelpText>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>