force-app/main/default/objects/Commission__c/fields/Customer_Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_ID__c</fullName>
    <formula>Opportunity__r.Account.Customer_Billing_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Billing ID</label>
    <type>Text</type>
</CustomField>