force-app/main/default/objects/Commission__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>TEXT(YEAR(Commission_Date__c ))
&amp;&quot;-&quot;
&amp;CASE(MONTH( Commission_Date__c ), 
  1,&quot;Q1&quot;, 
  2,&quot;Q1&quot;, 
  3,&quot;Q1&quot;, 
  4,&quot;Q2&quot;, 
  5,&quot;Q2&quot;, 
  6,&quot;Q2&quot;, 
  7,&quot;Q3&quot;, 
  8,&quot;Q3&quot;, 
  9,&quot;Q3&quot;, 
  10,&quot;Q4&quot;, 
  11,&quot;Q4&quot;, 
  12,&quot;Q3&quot;,  
  &quot;NA&quot;)</formula>
    <inlineHelpText>Fiscal date is based on the closed date</inlineHelpText>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>