force-app/main/default/objects/Commission__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag for Implementation portions of a new deal. Not the same as professional services deals</inlineHelpText>
    <label>Implementation</label>
    <type>Checkbox</type>
</CustomField>