force-app/main/default/objects/Commission__c/fields/Implementation_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Bookings__c</fullName>
    <formula>Opportunity__r.Implementation_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Opportunity Implementation Bookings</inlineHelpText>
    <label>Implementation Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>