force-app/main/default/objects/Commission__c/fields/Including_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Including_Accelerator__c</fullName>
    <formula>(Commissionable_Amount__c  *  Accelerator__c)* Rate_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Including Accelerator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>