force-app/main/default/objects/Commission__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>CASE(MONTH(Commission_Date__c), 
    1,&quot;January&quot;, 
    2,&quot;February&quot;, 
    3,&quot;March&quot;, 
    4,&quot;April&quot;, 
    5,&quot;May&quot;, 
    6,&quot;June&quot;, 
    7,&quot;July&quot;, 
    8,&quot;August&quot;, 
    9,&quot;September&quot;, 
    10,&quot;October&quot;, 
    11,&quot;November&quot;, 
    12,&quot;December&quot;,  
    &quot;NA&quot;)</formula>
    <inlineHelpText>reporting month calculated based on the opportunity closed date</inlineHelpText>
    <label>Month</label>
    <type>Text</type>
</CustomField>