force-app/main/default/objects/Commission__c/fields/of_Commissions__c.field-meta.xml
<CustomField>
    <fullName>of_Commissions__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Commissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>