force-app/main/default/objects/Commission__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <formula>IF(ISBLANK(Opportunity__r.Additional_Order_ID2__c) ,
     IF(ISBLANK(Opportunity__r.Additional_Order_ID1__c) , 
         Opportunity__r.Order_ID__c , 
           Opportunity__r.Order_ID__c    &amp; &quot;, &quot; &amp; Opportunity__r.Additional_Order_ID1__c ),
     Opportunity__r.Order_ID__c    &amp; &quot;, &quot; &amp; Opportunity__r.Additional_Order_ID1__c    &amp; &quot;, &quot;    &amp; Opportunity__r.Additional_Order_ID2__c
)</formula>
    <inlineHelpText>Populated from the opportunity</inlineHelpText>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>