force-app/main/default/objects/Commission__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>IF( 
	OR(Opportunity__r.Account.RecordType.Name = &quot;Customer&quot;, 
			Opportunity__r.Account.RecordType.Name = &quot;Prospect&quot;),
	TEXT(Opportunity__r.Account.Product__c), 
	Opportunity__r.Account.RecordType.Name 
)</formula>
    <inlineHelpText>Account Record Type Name associated with the opportunity</inlineHelpText>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>