force-app/main/default/objects/Commission__c/fields/Prorated_Months__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>for partial year deals</inlineHelpText>
    <label>Prorated Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>