force-app/main/default/objects/Commission__c/fields/Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>Rate_Basis__c</fullName>
    <label>Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
                <default>true</default>
                <label>Revenue</label>
            </value>
            <value>
                <fullName>Gross margin</fullName>
            </value>
            <value>
                <fullName>Bounty per unit</fullName>
            </value>
            <value>
                <fullName>Bonus amount</fullName>
            </value>
            <value>
                <fullName>PGi SPIF</fullName>
            </value>
            <value>
                <fullName>PGi Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>