force-app/main/default/objects/Commission__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Used for deal/opportunity splits</inlineHelpText>
    <label>Split %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>