force-app/main/default/objects/Commission__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>TEXT(Commission_Payee__r.Team__c )</formula>
    <inlineHelpText>Team the Payee is assigned</inlineHelpText>
    <label>Team</label>
    <type>Text</type>
</CustomField>