force-app/main/default/objects/Commission__c/fields/Total_License_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_License_Amount__c</fullName>
    <formula>Opportunity__r.Total_License_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From opportunity Total License Amount</inlineHelpText>
    <label>Total License Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>