force-app/main/default/objects/Commission__c/fields/X1st_Year_Booking__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year_Booking__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Opportunity 1st Year Booking</inlineHelpText>
    <label>1st Year Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>