force-app/main/default/objects/Commission__c/fields/X1st_Year_License_Amount__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year_License_Amount__c</fullName>
    <formula>Opportunity__r.First_Year_License_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Opportunity 1st Year License Amount</inlineHelpText>
    <label>1st Year License Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>