force-app/main/default/objects/Commission__c/fields/Year_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Year_Percentage__c</fullName>
    <formula>Prorated_Months__c/12</formula>
    <label>Year Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>