force-app/main/default/objects/Commission__c/validationRules/iMC_Paid_Date_is_Aproved.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Paid_Date_is_Aproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;,
NOT(ISBLANK( Paid_Date__c )),  
OR(
ISPICKVAL( Status__c , &quot;Pending&quot;),
ISPICKVAL( Status__c , &quot;Approved&quot;)
))</errorConditionFormula>
    <errorMessage>Status needs to be Approved &amp; Reviewed to be paid</errorMessage>
</ValidationRule>