force-app/main/default/objects/Commission__c/validationRules/iMC_Paid_Date_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>iMC_Paid_Date_is_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;,
ISBLANK( Paid_Date__c ), 
ISPICKVAL( Status__c , &quot;Paid&quot;)
)</errorConditionFormula>
    <errorMessage>Paid Status must have a paid date</errorMessage>
</ValidationRule>