force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <columns>Commission_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>All</label>
</ListView>