force-app/main/default/objects/Commission__c/listViews/All_Approved_Commissions_Frank.listView-meta.xml
<ListView>
    <fullName>All_Approved_Commissions_Frank</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Team__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_Date__c</field>
        <operation>greaterThan</operation>
        <value>3/31/2014</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2016</value>
    </filters>
    <filters>
        <field>Commission_Payee__c</field>
        <operation>contains</operation>
        <value>Frank</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Approved Q2 Commissions - Frank</label>
</ListView>