force-app/main/default/objects/Commission__c/listViews/All_Approved_CommissionsJason.listView-meta.xml
<ListView>
    <fullName>All_Approved_CommissionsJason</fullName>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation__c</columns>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <columns>Commission_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved,Approved &amp; Reviewed</value>
    </filters>
    <filters>
        <field>Commission_Payee__c</field>
        <operation>contains</operation>
        <value>Cohry</value>
    </filters>
    <label>All Approved Commissions- Jason</label>
</ListView>