force-app/main/default/objects/Commission__c/listViews/All_Commissions_Q3_Carry_Forward.listView-meta.xml
<ListView>
    <fullName>All_Commissions_Q3_Carry_Forward</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Close_Date__c</field>
        <operation>lessThan</operation>
        <value>6/30/2015</value>
    </filters>
    <filters>
        <field>Commission_Payee__c</field>
        <operation>contains</operation>
        <value>Jason,Marianna,Rula,Frank,Larry</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>greaterThan</operation>
        <value>6/30/2015</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>lessThan</operation>
        <value>10/1/2015</value>
    </filters>
    <label>All Commissions Q3 - Carry Forward</label>
</ListView>