force-app/main/default/objects/Commission__c/listViews/All_Paid_Commissions.listView-meta.xml
<ListView>
    <fullName>All_Paid_Commissions</fullName>
    <columns>Commission_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation__c</columns>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <columns>Commission_Payee__c</columns>
    <columns>Paid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>All Paid Commissions</label>
</ListView>