force-app/main/default/objects/Commission__c/listViews/All_Pending_Commissions_Marianna_Q415.listView-meta.xml
<ListView>
    <fullName>All_Pending_Commissions_Marianna_Q415</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>greaterThan</operation>
        <value>9/30/2015</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2015</value>
    </filters>
    <filters>
        <field>Commission_Payee__c</field>
        <operation>contains</operation>
        <value>Marianna</value>
    </filters>
    <label>All Pending Commissions - Marianna- Q415</label>
</ListView>