force-app/main/default/objects/Commission__c/listViews/AllPGiCommissions.listView-meta.xml
<ListView>
    <fullName>AllPGiCommissions</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Rate_Basis__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Rate_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rate_Basis__c</field>
        <operation>startsWith</operation>
        <value>PGi</value>
    </filters>
    <label>All PGi Commissions</label>
</ListView>