force-app/main/default/objects/Commission__c/listViews/Clean_UpFix_Commissions.listView-meta.xml
<ListView>
    <fullName>Clean_UpFix_Commissions</fullName>
    <columns>Status__c</columns>
    <columns>Commission_Payee__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>X1st_Year_Booking__c</columns>
    <columns>X1st_Year_License_Amount__c</columns>
    <columns>Total_Bookings__c</columns>
    <columns>Implementation__c</columns>
    <columns>Professional_Services_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pending,Approved,Approved &amp; Reviewed,Paid</value>
    </filters>
    <label>Clean-Up Fix Commissions</label>
</ListView>