force-app/main/default/objects/Commission__c/listViews/Pending_AM_Commissions.listView-meta.xml
<ListView>
    <fullName>Pending_AM_Commissions</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Team__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Commission_Payee__c</field>
        <operation>contains</operation>
        <value>Frank,Jason,Rula,Marianna</value>
    </filters>
    <label>Pending AM Commissions</label>
</ListView>