force-app/main/default/objects/Commission__c/listViews/Pending_for_Scott.listView-meta.xml
<ListView>
    <fullName>Pending_for_Scott</fullName>
    <columns>Commission_Payee__c</columns>
    <columns>Commission_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Rate_Percent__c</columns>
    <columns>Commissionable_Amount__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Commission_Date__c</field>
        <operation>equals</operation>
        <value>LAST_QUARTER</value>
    </filters>
    <label>Pending for Scott</label>
</ListView>